...
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp">

    <Button
        android:id="@+id/sign_in_button"
        style="?android:textAppearanceSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="88dp"
        android:onClick="clickSignIn"
        android:text="Sign In"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:layout_editor_absoluteY="325dp" />

    <Button
        android:id="@+id/sign_up_button"
...
