//package com.example.esc_50005.UI.Welcome;
//
//
//import android.support.test.espresso.ViewInteraction;
//import android.support.test.rule.ActivityTestRule;
//import android.support.test.runner.AndroidJUnit4;
//import android.test.suitebuilder.annotation.LargeTest;
//import android.view.View;
//import android.view.ViewGroup;
//import android.view.ViewParent;
//
//import com.example.esc_50005.R;
//
//import org.hamcrest.Description;
//import org.hamcrest.Matcher;
//import org.hamcrest.TypeSafeMatcher;
//import org.junit.Before;
//import org.junit.Rule;
//import org.junit.Test;
//import org.junit.runner.RunWith;
//
//import static android.support.test.espresso.Espresso.onView;
//import static android.support.test.espresso.Espresso.pressBack;
//import static android.support.test.espresso.action.ViewActions.click;
//import static android.support.test.espresso.action.ViewActions.closeSoftKeyboard;
//import static android.support.test.espresso.action.ViewActions.replaceText;
//import static android.support.test.espresso.action.ViewActions.scrollTo;
//import static android.support.test.espresso.contrib.RecyclerViewActions.actionOnItemAtPosition;
//import static android.support.test.espresso.matcher.ViewMatchers.isDisplayed;
//import static android.support.test.espresso.matcher.ViewMatchers.withClassName;
//import static android.support.test.espresso.matcher.ViewMatchers.withId;
//import static android.support.test.espresso.matcher.ViewMatchers.withText;
//import static org.hamcrest.Matchers.allOf;
//import static org.hamcrest.Matchers.is;
//
//@LargeTest
//@RunWith(AndroidJUnit4.class)
//public class StudentSubmit {
//
//    @Rule
//    public ActivityTestRule<WelcomeActivity> mActivityTestRule = new ActivityTestRule<>(WelcomeActivity.class);
//
//    @Before
//    public void init() {
//        ViewInteraction appCompatButton = onView(
//                allOf(withId(R.id.sign_in_button), withText("Sign In"),
//                        childAtPosition(
//                                allOf(withId(R.id.signupFragment),
//                                        childAtPosition(
//                                                withClassName(is("android.widget.LinearLayout")),
//                                                0)),
//                                0),
//                        isDisplayed()));
//        appCompatButton.perform(click());
//
//
//        ViewInteraction appCompatAutoCompleteTextView = onView(
//                allOf(withId(R.id.email),
//                        childAtPosition(
//                                childAtPosition(
//                                        withClassName(is("android.support.design.widget.TextInputLayout")),
//                                        0),
//                                0)));
//        appCompatAutoCompleteTextView.perform(scrollTo(), replaceText("hoonqt"), closeSoftKeyboard());
//
//        ViewInteraction appCompatEditText = onView(
//                allOf(withId(R.id.password),
//                        childAtPosition(
//                                childAtPosition(
//                                        withClassName(is("android.support.design.widget.TextInputLayout")),
//                                        0),
//                                0)));
//        appCompatEditText.perform(scrollTo(), replaceText("deusexmachina"), closeSoftKeyboard());
//
//        ViewInteraction appCompatRadioButton = onView(
//                allOf(withId(R.id.student), withText("Student"),
//                        childAtPosition(
//                                allOf(withId(R.id.professorOrStudent),
//                                        childAtPosition(
//                                                withId(R.id.email_login_form),
//                                                2)),
//                                1)));
//        appCompatRadioButton.perform(scrollTo(), click());
//
//        ViewInteraction appCompatButton3 = onView(
//                allOf(withId(R.id.login_button), withText("Sign in or register"),
//                        childAtPosition(
//                                allOf(withId(R.id.email_login_form),
//                                        childAtPosition(
//                                                withId(R.id.login_form),
//                                                0)),
//                                3)));
//        appCompatButton3.perform(scrollTo(), click());
//
//        ViewInteraction editText = onView(
//                allOf(childAtPosition(
//                        childAtPosition(
//                                withId(android.R.id.custom),
//                                0),
//                        0),
//                        isDisplayed()));
//        editText.perform(click());
//
//        ViewInteraction editText2 = onView(
//                allOf(childAtPosition(
//                        childAtPosition(
//                                withId(android.R.id.custom),
//                                0),
//                        0),
//                        isDisplayed()));
//        editText2.perform(replaceText("Grey"), closeSoftKeyboard());
//
//        ViewInteraction appCompatButton4 = onView(
//                allOf(withId(android.R.id.button2), withText("Submit"),
//                        childAtPosition(
//                                childAtPosition(
//                                        withClassName(is("android.widget.ScrollView")),
//                                        0),
//                                2)));
//        appCompatButton4.perform(scrollTo(), click());
//
//        ViewInteraction recyclerView = onView(
//                allOf(withId(R.id.recyclerViewDashboardCourses),
//                        childAtPosition(
//                                withId(R.id.studentDashboardFragment),
//                                0)));
//        recyclerView.perform(actionOnItemAtPosition(0, click()));
//
//        ViewInteraction recyclerView2 = onView(
//                allOf(withId(R.id.sessions_recycler),
//                        childAtPosition(
//                                withClassName(is("android.widget.LinearLayout")),
//                                1)));
//        recyclerView2.perform(actionOnItemAtPosition(0, click()));
//
//        ViewInteraction tabView = onView(
//                allOf(childAtPosition(
//                        childAtPosition(
//                                withId(R.id.tab_layout),
//                                0),
//                        1),
//                        isDisplayed()));
//        tabView.perform(click());
//
//        pressBack();
//
//
//    }
//
//    @Test
//    public void studentSubmit() {
//        ViewInteraction appCompatTextView = onView(
//                allOf(withId(R.id.quizname), withText("Quiz 1"),
//                        childAtPosition(
//                                childAtPosition(
//                                        withId(R.id.prof_question_cv),
//                                        0),
//                                0),
//                        isDisplayed()));
//        appCompatTextView.perform(click());
//
//        ViewInteraction appCompatRadioButton2 = onView(
//                allOf(withId(R.id.option2), withText("blue"),
//                        childAtPosition(
//                                allOf(withId(R.id.radiobuttons),
//                                        childAtPosition(
//                                                withClassName(is("android.widget.RelativeLayout")),
//                                                1)),
//                                1),
//                        isDisplayed()));
//        appCompatRadioButton2.perform(click());
//
//        ViewInteraction appCompatRadioButton3 = onView(
//                allOf(withId(R.id.option1), withText("White"),
//                        childAtPosition(
//                                allOf(withId(R.id.radiobuttons),
//                                        childAtPosition(
//                                                withClassName(is("android.widget.RelativeLayout")),
//                                                1)),
//                                0),
//                        isDisplayed()));
//        appCompatRadioButton3.perform(click());
//
//        ViewInteraction appCompatRadioButton4 = onView(
//                allOf(withId(R.id.option1), withText("Walter died"),
//                        childAtPosition(
//                                allOf(withId(R.id.radiobuttons),
//                                        childAtPosition(
//                                                withClassName(is("android.widget.RelativeLayout")),
//                                                1)),
//                                0),
//                        isDisplayed()));
//        appCompatRadioButton4.perform(click());
//
//        ViewInteraction appCompatRadioButton5 = onView(
//                allOf(withId(R.id.option2), withText("blue"),
//                        childAtPosition(
//                                allOf(withId(R.id.radiobuttons),
//                                        childAtPosition(
//                                                withClassName(is("android.widget.RelativeLayout")),
//                                                1)),
//                                1),
//                        isDisplayed()));
//        appCompatRadioButton5.perform(click());
//
//        ViewInteraction appCompatRadioButton6 = onView(
//                allOf(withId(R.id.option1), withText("Walter died"),
//                        childAtPosition(
//                                allOf(withId(R.id.radiobuttons),
//                                        childAtPosition(
//                                                withClassName(is("android.widget.RelativeLayout")),
//                                                1)),
//                                0),
//                        isDisplayed()));
//        appCompatRadioButton6.perform(click());
//
//        ViewInteraction appCompatRadioButton7 = onView(
//                allOf(withId(R.id.option1), withText("white"),
//                        childAtPosition(
//                                allOf(withId(R.id.radiobuttons),
//                                        childAtPosition(
//                                                withClassName(is("android.widget.RelativeLayout")),
//                                                1)),
//                                0),
//                        isDisplayed()));
//        appCompatRadioButton7.perform(click());
//
//        ViewInteraction appCompatButton5 = onView(
//                allOf(withId(R.id.submitbutton), withText("Submit"),
//                        childAtPosition(
//                                childAtPosition(
//                                        withClassName(is("android.widget.RelativeLayout")),
//                                        0),
//                                1),
//                        isDisplayed()));
//        appCompatButton5.perform(click());
//
//    }
//
//    private static Matcher<View> childAtPosition(
//            final Matcher<View> parentMatcher, final int position) {
//
//        return new TypeSafeMatcher<View>() {
//            @Override
//            public void describeTo(Description description) {
//                description.appendText("Child at position " + position + " in parent ");
//                parentMatcher.describeTo(description);
//            }
//
//            @Override
//            public boolean matchesSafely(View view) {
//                ViewParent parent = view.getParent();
//                return parent instanceof ViewGroup && parentMatcher.matches(parent)
//                        && view.equals(((ViewGroup) parent).getChildAt(position));
//            }
//        };
//    }
//}
